// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders Select correctly 1`] = `
<div
  class="sc-aXZVg kITBOQ sc-eqUAAy ioySWY"
>
  <div
    class="sc-aXZVg kITBOQ sc-dcJsrY gQkXST"
  >
    <div
      class="sc-aXZVg kITBOQ sc-iGgWBj dVsvjD"
    >
      Select an option
    </div>
    <div
      class="sc-aXZVg kITBOQ sc-dAlyuH eEpSkN notranslate "
    >
      keyboard_arrow_down
    </div>
  </div>
  <div
    class="sc-aXZVg kITBOQ"
  />
</div>
`;

exports[`Select should be rendered as a multi select if the selected prop is an array 1`] = `
<div
  class="sc-aXZVg kITBOQ sc-eqUAAy ioySWY"
>
  <div
    class="sc-aXZVg kITBOQ sc-dcJsrY gQkXST"
  >
    <div
      class="sc-aXZVg kITBOQ sc-iGgWBj dVsvjD"
    >
      Option 2, Option 4
    </div>
    <div
      class="sc-aXZVg kITBOQ sc-dAlyuH eEpSkN notranslate "
    >
      keyboard_arrow_down
    </div>
  </div>
  <div
    class="sc-aXZVg kITBOQ"
  />
</div>
`;
